changes date filter news module angular

--- a/front/src/main/webapp/jade/index.jade
+++ b/front/src/main/webapp/jade/index.jade
@@ -11,10 +11,10 @@ html.no-js
 			
 			nav.main-nav
 				ul.nav-listing
-					li.selected: a(href='#')
+					li.selected: a(href='index.html')
 						span.icon
 						span.tag Dashboard de inicio
-					li: a(href='#')
+					li: a(href='news.html')
 						span.icon
 						span.tag Actualidad de la industria
 					li: a(href='#')
