--- a/front/src/main/webapp/jade/actualidad-tweets.jade
+++ b/front/src/main/webapp/jade/actualidad-tweets.jade
@@ -32,7 +32,7 @@ html.no-js
 					
 
 			section.main-container
-				.main-container-overlay
+				+container-overlay
 
 				.panel-title: .container
 					h1 Actualidad en la industria
