--- a/front/src/main/webapp/jade/includes/head.jade
+++ b/front/src/main/webapp/jade/includes/head.jade
@@ -14,3 +14,6 @@ head
 
 	// fancybox
 	link(rel='stylesheet', href='css/fancybox.css')
+
+	// google maps
+	script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBFh3N56APo7c_AdXB2k9AJjiTG_2faY&sensor=FALSE')
