--- a/front/src/main/webapp/jade/question.jade
+++ b/front/src/main/webapp/jade/question.jade
@@ -37,6 +37,7 @@ html.no-js
 				.panel-title: .container
 					h1 Cuestionario
 
+				//- barra independiente, pues se le agregará información del porcentaje del perfil completado
 				.panel-question-bar
 					.container
 						.half
@@ -59,62 +60,63 @@ html.no-js
 
 				.panel-question-all-blocks-container
 					.container
-						.panel-question-container
-							header
-								h2 Economía
-								p 12 de 13 preguntas contestadas
+						form(action='#').form
+							.panel-question-container
+								header
+									h2 Economía
+									p 12 de 13 preguntas contestadas
 
-							fieldset
-								dl.question
-									dt
-										label ¿Cónoce el significado de los principales indicadores económicos de su industria?
-									dd.answers
-										ul
-											li.input-radio
-												input(type='radio', id='q1-a1', name='q1')
-												label(for='q1-a1') Sí
+								fieldset
+									dl.question
+										dt
+											label ¿Cónoce el significado de los principales indicadores económicos de su industria?
+										dd.answers
+											ul
+												li.input-radio
+													input(type='radio', id='q1-a1', name='q1')
+													label(for='q1-a1') Sí
 
-											li.input-radio
-												input(type='radio', id='q1-a2', name='q1')
-												label(for='q1-a2') No
-
-
-								dl.question
-									dt
-										label ¿En qué tipo de noticias de la industria está interesado?
-									dd.answers
-										ul
-											li.input-checkbox
-												input(type='checkbox', id='q2-a1', name='q2')
-												label(for='q2-a1') Negocios
-
-											li.input-checkbox
-												input(type='checkbox', id='q2-a2', name='q2')
-												label(for='q2-a2') Tecnología
-
-											li.input-checkbox
-												input(type='checkbox', id='q2-a3', name='q2')
-												label(for='q2-a3') Acerca de sus clientes
+												li.input-radio
+													input(type='radio', id='q1-a2', name='q1')
+													label(for='q1-a2') No
 
 
-								dl.question
-									dt
-										label ¿Cuales son sus principales productos o servicios?
+									dl.question
+										dt
+											label ¿En qué tipo de noticias de la industria está interesado?
+										dd.answers
+											ul
+												li.input-checkbox
+													input(type='checkbox', id='q2-a1', name='q2')
+													label(for='q2-a1') Negocios
 
-									dd.answers
-										ul											
-											li.input-text
-												input(type='text')
+												li.input-checkbox
+													input(type='checkbox', id='q2-a2', name='q2')
+													label(for='q2-a2') Tecnología
+
+												li.input-checkbox
+													input(type='checkbox', id='q2-a3', name='q2')
+													label(for='q2-a3') Acerca de sus clientes
+
+
+									dl.question
+										dt
+											label ¿Cuales son sus principales productos o servicios?
+
+										dd.answers
+											ul											
+												li.input-text
+													input(type='text')
 
 
 
-						.action
-							.half
-								.left
-									br
+							.action
+								.half
+									.left
+										br
 
-								.right
-									a(href='question-2.html').btn Siguiente <i class='fa fa-chevron-right'></i>
+									.right
+										a(href='question-2.html').btn Siguiente <i class='fa fa-chevron-right'></i>
 	
 
 			include includes/notifications
